# bl1nk-keyword-validate

./: README.md  metadata.json  package-lock.json  package.json
app/: page.tsx
bl1nk-keyword-validator/: README.md  plan.md  todo.md
bl1nk-keyword-validator/cli/: Cargo.toml
bl1nk-keyword-validator/cli/src/: main.rs
bl1nk-keyword-validator/core/src/: search.rs
bl1nk-keyword-validator/docs/: ci-cd.md
