[package]
name = "bl1nk-keyword-cli"
version = "1.1.0"
edition = "2021"
authors = ["อาจารย์"]
description = "CLI interface for keyword registry management"

[dependencies]
bl1nk-keyword-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
schemars = "0.8"
serde_yaml = "0.9"
glob = "0.3"

[[bin]]
name = "keyword-registry"
path = "src/main.rs"
